test/extern/ExternBlockClangError.good
ExternBlockClangError.chpl:1: error: error running clang on extern block
ExternBlockClangError.chpl:3: error: no previous prototype for function 'bar'
